# project2_Nechaeva_Anna_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: main.py
